production/common/js/bower/requirejs/tests/error/c.js
define(["a"],function(n){return{name:"c",a:n}});